chp12_ingress/set1222_path_based_ingress/set1222_dns-test.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: dns-test
  name: dns-test
  namespace: chp12-set1222
spec:
  containers:
  - image: georgebaptista/tiny-tools-bash:0.1
    imagePullPolicy: IfNotPresent
    name: dns-test
    stdin: true
    stdinOnce: true
    tty: true
