chp12_ingress/set1222_path_based_ingress/set1222_ingress_kiada.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kiada-example-com
  namespace: chp12-set1222
spec:
  rules:
  # To map kubia.example.com to our service on microk8s
  # Add this entry to /etc/hosts
  # 127.0.0.1 kiada.example.com
  - host: kiada.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kiada
            port:
              number: 80    # could also use "name: http" instead of "number: 80"
