chp12_ingress/set1222_path_based_ingress/set1222_ingress_quote.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-example-com
  namespace: chp12-set1222
spec:
  rules:
  # To map api.example.com to our service on microk8s
  # Add this entry to /etc/hosts
  # 127.0.0.1 api.example.com
  - host: api.example.com
    http:
      paths:
      - path: /quote
        pathType: Exact
        backend:
          service:
            name: quote
            port:
              name: http
      - path: /questions
        pathType: Prefix
        backend:
          service:
            name: quiz
            port:
              name: http
